# first_project

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml
src/api/: models.py  serializers.py  urls.py  views.py
src/api/fixtures/: test_booking.json  test_hotel_room.json
src/api/migrations/: 0001_initial.py  0002_alter_hotel_id.py  0003_hotel_created_at.py  0004_alter_hotel_created_at.py  0005_alter_reservation_hotel_room.py  0006_alter_hotel_created_at.py
src/api/tests/: conftest.py  test_api.py
src/myapp/: settings.py  urls.py
